# devcon

./: .gitignore  CMakeLists.txt  README.md  activate.bat  activate.sh  bmi_calculator.py  test_bmi_calculator.py
.devcontainer/: Dockerfile  devcontainer.json
src/: main.cpp
